Section in navbar toggle, small UI fixes, refactoring

--- a/src/components/BandMembersList.astro
+++ b/src/components/BandMembersList.astro
@@ -9,7 +9,7 @@ let delay = 0;
   members.map((member) => {
     delay += 150;
     return (
-      <div class="col-lg-3 col-md-4 col-sm-6 p-2">
+      <div class="col-lg-3 col-md-4 col-sm-6">
         <AOS animation="flip-left" delay={delay}>
           <div class="card border-0 border-bottom border shadow-sm overflow-hidden">
             <div class="card-body">
