--- a/src/components/sections/FAQ.astro
+++ b/src/components/sections/FAQ.astro
@@ -39,7 +39,7 @@ const { subsections } = section;
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button
-                      class="accordion-button collapsed"
+                      class="accordion-button gap-2 collapsed"
                       type="button"
                       data-bs-toggle="collapse"
                       data-bs-target={"#faq-question" + index}
