--- a/src/components/ThemePicker.astro
+++ b/src/components/ThemePicker.astro
@@ -1,13 +1,26 @@
-<button role="button" type="button" class="btn theme-picker btn-link" title="Skift farvetema">
-  <svg class="icon-dark" xmlns="http://www.w3.org/2000/svg"  width="25px" height="20px" viewBox="0 0 24 24">
+<button
+  role="button"
+  type="button"
+  class="btn theme-picker btn-link"
+  title="Skift farvetema">
+  <svg
+    class="icon-dark"
+    xmlns="http://www.w3.org/2000/svg"
+    width="25px"
+    height="20px"
+    viewBox="0 0 24 24">
     <path
       fill="currentColor"
       d="M11.38 2.019a7.5 7.5 0 1 0 10.6 10.6C21.662 17.854 17.316 22 12.001 22C6.477 22 2 17.523 2 12c0-5.315 4.146-9.661 9.38-9.981"
     ></path>
   </svg>
-  <svg class="icon-light" xmlns="http://www.w3.org/2000/svg"  width="25px" height="20px" viewBox="0 0 24 24">
+  <svg
+    class="icon-light"
+    xmlns="http://www.w3.org/2000/svg"
+    width="25px"
+    height="20px"
+    viewBox="0 0 24 24">
     <path
-    
       fill="currentColor"
       d="M12 18a6 6 0 1 1 0-12a6 6 0 0 1 0 12M11 1h2v3h-2zm0 19h2v3h-2zM3.515 4.929l1.414-1.414L7.05 5.636L5.636 7.05zM16.95 18.364l1.414-1.414l2.121 2.121l-1.414 1.414zm2.121-14.85l1.414 1.415l-2.121 2.121l-1.414-1.414zM5.636 16.95l1.414 1.414l-2.121 2.121l-1.414-1.414zM23 11v2h-3v-2zM4 11v2H1v-2z"
     ></path>
