--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,41 +1,13 @@
 ---
-import type { Section } from "../models/Models";
 import MainLayout from "../layouts/MainLayout.astro";
 import Navbar from "../components/Navbar.astro";
-import { getLoadedSectionComponents } from "../scripts/componentLoader.ts";
-import { getSections } from "../scripts/hygraph.js";
+import SectionRenderer from "../components/SectionRenderer.astro";
 
-import Footer from "../components/Footer.astro";
-import About from "../components/sections/About.astro";
-import FAQ from "../components/sections/FAQ.astro";
-import Header from "../components/sections/Header.astro";
-import Reviews from "../components/sections/Reviews.astro";
-import Music from "../components/sections/Music.astro";
-
-const sectionsData = await getSections();
-const sections = sectionsData.data.sections as Section[];
-const sectionsSorted = sections.sort(
-  (prevSection, nextSection) => prevSection.order - nextSection.order
-);
 ---
 
 <MainLayout title="Snack Patrol">
-  <Navbar sections={sectionsSorted} />
+  <Navbar />
   <div data-bs-spy="scroll" data-bs-target="#navbar-scroll" data-bs-smooth-scroll="true">
-    {
-
-      sectionsSorted.map(
-        (section) => {
-          return (
-            section.sectionId == "about" ? <About section={section}/> :
-            section.sectionId == "faq" ? <FAQ section={section}/> :
-            section.sectionId == "header" ? <Header section={section}/> :
-            section.sectionId == "reviews" ? <Reviews section={section}/> :
-            section.sectionId == "music" ? <Music section={section}/> :
-            null
-          );
-      })
-    }
+    <SectionRenderer/>
   </div>
-  <Footer />
 </MainLayout>
