--- a/src/components/ReviewCard.astro
+++ b/src/components/ReviewCard.astro
@@ -5,12 +5,12 @@ interface Props {
   review: Review;
 }
 const { review } = Astro.props;
-const { name, location, text, stars, image, date } = review;
+const { name, location, text, date } = review;
 ---
 
 <div class="col-10 m-auto">
   <h4 class="card-title text-muted">{name}</h4>
-  <p class="text-muted">{location.toLowerCase()}</p>
+  <p class="text-muted">{location}</p>
   <p class="card-text">{text}</p>
   <div>
     <p class="text-muted small text-end m-0 py-2"><i>{date}</i></p>
