Reviews sorted by date

--- a/src/components/ReviewCard.astro
+++ b/src/components/ReviewCard.astro
@@ -11,8 +11,8 @@ const { name, location, text, date } = review;
 <div class="col-10 m-auto">
   <h4 class="card-title text-muted">{name}</h4>
   <p class="text-muted">{location}</p>
-  <p class="card-text">{text}</p>
-  <div>
-    <p class="text-muted small text-end m-0 py-2"><i>{date}</i></p>
-  </div>
+  <p class="card-text mw-100">{text}</p>
+
+    <div class="text-muted small text-end m-0 py-2"><i>{date}</i></div>
+
 </div>
